--- a/views/pages/ShowPage.ejs
+++ b/views/pages/ShowPage.ejs
@@ -20,6 +20,33 @@
 
 <main>
 
+<br>
+
+<ul class="list-group">
+  <li class="list-group-item active">Current show</li>
+  <li class="list-group-item">Name of Show</li>
+  <li class="list-group-item">Start time</li>
+  <li class="list-group-item">2 hours, 15 minutes</li>
+  <li class="list-group-item">
+	<div class="box8"><img class="rectangle" src="music.jpeg" alt="music logo" width="250" height="200"/></div>
+</li>
+</ul>
+
+
+
+       
+
+<br><br>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-success">Other Upcoming Songs</li>
+  <li class="list-group-item list-group-item-warning">This Song</li>
+  <li class="list-group-item list-group-item-warning">Another Song</li>
+  <li class="list-group-item list-group-item-warning">qwerty song</li>
+  <li class="list-group-item list-group-item-warning">asdfghjkl song</li>
+  <li class="list-group-item list-group-item-warning">zusdgs song</li>
+</ul>
+<br><br>
+
 </main>
 
 <footer>
