--- a/views/partials/ShowPage.ejs
+++ b/views/partials/ShowPage.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title> Show Page </title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<main>
+
 
 	<script>
 
@@ -74,41 +75,8 @@
 	
     <div class="box"><div class="rectangle"></div></div>
   
-    <div class="box2">
-      <div class="group">
-        <div class="overlap-group"><div class="text-wrapper">K</div></div>
-        <div class="div">AMB</div>
-      </div>
-    </div> 
-
-      <div class="box3"><img class="ellipse" src="img/ellipse.png"/></div>
-      <div class="box4"><div class="rectangle"></div></div>
+    
 	
-	<div class="box6" div class="rectangle">
-        <h2>Current Show</h2>
-      	</div>
-	<br><br><br><br>    
-
-      <div class="box7" div class="rectangle">
-      <br>
-       <label for="Show Name">Some show</label><br>
-
-       <label for="Start time">1:55 PM</label><br>
-       
-       <label for="length">2 hours, 15 minutes<label><br>
-	<br><br>
-      </div>
-	<br><br><br><br><br><br>
-       <div class="box8"><img class="rectangle" src="img/music.jpeg" alt="music logo" width="250" height="200"/></div>
-
-	<div id="upcoming songs">
-	<p><h2> Other upcoming songs</h2></p>
-	<ul>
-		<li>This Song</li>
-		<li>Another Song</li>
-		<li>qwerty song</li>
-		<li>asdfghjkl song</li>
-		<li>zusdgs song</li>
-	</ul>
-</body>
+	
+</main>
 </html>
