--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 
   <div class="text-center p-3" style="background-color: lightblue;">
     DJ Selection page
-    <a class="text-dark" href="">kamb.com</a>
+    <a class="text-dark" href='/'>kamb.com</a>
 
     <a class="text-dark" href='/showpage'> Upcoming Show</a>
   	
